tests/baselines/reference/unusedLocalsAndObjectSpread.errors.txt
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(7,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(14,15): error TS6133: '_' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndObjectSpread.ts (2 errors) ====
    
    declare var console: { log(a: any): void };
    
    function one() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo;
               ~
!!! error TS6133: 'a' is declared but never used.
        console.log(bar);
    }
    
    function two() {
        const foo = { a: 1, b: 2 };
        // '_' is declared but never used
        const {a: _, ...bar} = foo;
                  ~
!!! error TS6133: '_' is declared but never used.
        console.log(bar);
    }
    
    